Se agrega información sobre los proyectos realizados.

--- a/index.html
+++ b/index.html
@@ -161,23 +161,23 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="https://github.com/alvaramz/pruebas" class="image fit"><img src="images/pruebas.png" alt="" /></a>
+										<a href="http://repositorio.inie.ucr.ac.cr/" class="image fit"><img src="images/otros/repositorio_inie.png" alt="" /></a>
 										<header>
-											<h3>Pruebas Java</h3>
+											<h3>Repositorio INIE</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="http://congresoctg.ucr.ac.cr/" class="image fit"><img src="images/otros/sitio_web_congreso.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>XI Congreso CTyG</h3>
 										</header>
 									</article>
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="http://protea.ucr.ac.cr/matricula/" class="image fit"><img src="images/otros/matricula_protea.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Matrícula PROTEA</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -189,9 +189,9 @@
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="http://protea.ucr.ac.cr/src/protea_reservations/" class="image fit"><img src="images/otros/protea_reservaciones.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Reservaciones - Facedu</h3>
 										</header>
 									</article>
 									<article class="item">
