Se agrega otro proyecto de github a la lista

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="https://github.com/alvaramz/pruebas" class="image fit"><img src="images/pruebas.png" alt="" /></a>
+										<a href="https://github.com/alvaramz/pruebas" class="image fit"><img src="images/github/pruebas.png" alt="" /></a>
 										<header>
 											<h3>Pruebas Java</h3>
 										</header>
@@ -117,9 +117,9 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://alvaramz.github.io/ReservacionesFacultadEducacion/" class="image fit"><img src="images/github/reservaciones.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Reservaciones Facultad Educación</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -131,9 +131,9 @@
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://alvaramz.github.io/calendariocongreso/" class="image fit"><img src="images/github/calendario_congreso.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Calendario Congreso</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -181,9 +181,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="http://congresoctg.ucr.ac.cr/programa/" class="image fit"><img src="images/otros/programa_congreso.png" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Programa Congreso CTyG</h3>
 										</header>
 									</article>
 								</div>
@@ -195,9 +195,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="http://comunidad.inie.ucr.ac.cr/" class="image fit"><img src="images/otros/cvaa_inie.png" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Comunidad Ambiental de Aprendizaje</h3>
 										</header>
 									</article>
 								</div>
