Se hace una primera versión :)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Introducción</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Proyectos</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Otros proyectos</span></a></li>
-								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contacto</span></a></li>
+								<li><a href="#detalle" id="detalle-link" class="skel-layers-ignoreHref"><span class="icon fa-server">Detalle</span></a></li>
 							</ul>
 						</nav>
 
@@ -108,12 +108,6 @@
 											<h3>Pruebas Java</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
@@ -122,24 +116,12 @@
 											<h3>Reservaciones Facultad Educación</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
 										<a href="https://alvaramz.github.io/calendariocongreso/" class="image fit"><img src="images/github/calendario_congreso.png" alt="" /></a>
 										<header>
 											<h3>Calendario Congreso</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
 										</header>
 									</article>
 								</div>
@@ -207,30 +189,15 @@
 					</section>
 
 				<!-- Contact -->
-					<section id="contact" class="four">
+					<section id="detalle" class="four">
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Detalle de los proyectos realizados</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>En esta sección se hace un recorrido por los proyectos realizados.</p>
 
-							<form method="post" action="#">
-								<div class="row">
-									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="12u$">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="12u$">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
 
 						</div>
 					</section>
