Se agrega el proyecto UnirPDF

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 											<h3>Reservaciones Facultad Educación</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="https://alvaramz.github.io/UnirPDF/" class="image fit"><img src="images/github/unir_pdf.png" alt="" /></a>
+										<header>
+											<h3>Unir PDF</h3>
+										</header>
+									</article>
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
