--- a/index.html
+++ b/index.html
@@ -1,233 +1,13 @@
-<!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Adrián Alvarado Ramírez</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
-
-		<!-- Header -->
-			<div id="header">
-
-				<div class="top">
-
-					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Adrián Alvarado Ramírez</h1>
-							<p>Ingeniero en Computación</p>
-						</div>
-
-					<!-- Nav -->
-						<nav id="nav">
-							<!--
-
-								Prologue's nav expects links in one of two formats:
-
-								1. Hash link (scrolls to a different section within the page)
-
-								   <li><a href="#foobar" id="foobar-link" class="icon fa-whatever-icon-you-want skel-layers-ignoreHref"><span class="label">Foobar</span></a></li>
-
-								2. Standard link (sends the user to another page/site)
-
-								   <li><a href="http://foobar.tld" id="foobar-link" class="icon fa-whatever-icon-you-want"><span class="label">Foobar</span></a></li>
-
-							-->
-							<ul>
-								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Introducción</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Proyectos</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Otros proyectos</span></a></li>
-								<li><a href="#detalle" id="detalle-link" class="skel-layers-ignoreHref"><span class="icon fa-server">Detalle</span></a></li>
-							</ul>
-						</nav>
-
-				</div>
-
-				<div class="bottom">
-
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-
-				</div>
-
-			</div>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- Intro -->
-					<section id="top" class="one dark cover">
-						<div class="container">
-
-							<header>
-								<h2 class="alt">Bienvenido a la página de presentación del repositorio de Github del
-							 <strong>Ing. Adrián Alvarado Ramírez</strong>.</h2>
-								<p>En esta página encontrá una referencia a los proyectos alojados en Github, orientados a brindar <strong>frameworks</strong>
-								para el desarrollo de aplicaciones en distintas tecnologías. El repositorio parte de una serie de ejemplos básicos de Java SE y Java Web,
-							     y está en crecimiento constante.</p>
-							</header>
-
-							<footer>
-								<a href="#portfolio" class="button scrolly">Proyectos en Github</a>
-							</footer>
-
-						</div>
-					</section>
-
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
-
-							<header>
-								<h2>Proyectos en Github</h2>
-							</header>
-
-							<p>En esta sección se listan los proyectos en Github.</p>
-
-							<div class="row">
-								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="https://github.com/alvaramz/pruebas" class="image fit"><img src="images/github/pruebas.png" alt="" /></a>
-										<header>
-											<h3>Pruebas Java</h3>
-										</header>
-									</article>
-								</div>
-								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="https://alvaramz.github.io/ReservacionesFacultadEducacion/" class="image fit"><img src="images/github/reservaciones.png" alt="" /></a>
-										<header>
-											<h3>Reservaciones Facultad Educación</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="https://alvaramz.github.io/UnirPDF/" class="image fit"><img src="images/github/unir_pdf.png" alt="" /></a>
-										<header>
-											<h3>Unir PDF</h3>
-										</header>
-									</article>
-								</div>
-								<div class="4u$ 12u$(mobile)">
-									<article class="item">
-										<a href="https://alvaramz.github.io/calendariocongreso/" class="image fit"><img src="images/github/calendario_congreso.png" alt="" /></a>
-										<header>
-											<h3>Calendario Congreso</h3>
-										</header>
-									</article>
-								</div>
-							</div>
-
-						</div>
-					</section>
-
-				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
-
-							<header>
-								<h2>Otros proyectos</h2>
-							</header>
-
-							<p>A continuación se listan otros proyectos desarrollados.</p>
-
-							<div class="row">
-								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="http://repositorio.inie.ucr.ac.cr/" class="image fit"><img src="images/otros/repositorio_inie.png" alt="" /></a>
-										<header>
-											<h3>Repositorio INIE</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="http://congresoctg.ucr.ac.cr/" class="image fit"><img src="images/otros/sitio_web_congreso.png" alt="" /></a>
-										<header>
-											<h3>XI Congreso CTyG</h3>
-										</header>
-									</article>
-								</div>
-								<div class="4u 12u$(mobile)">
-									<article class="item">
-										<a href="http://protea.ucr.ac.cr/matricula/" class="image fit"><img src="images/otros/matricula_protea.png" alt="" /></a>
-										<header>
-											<h3>Matrícula PROTEA</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="http://congresoctg.ucr.ac.cr/programa/" class="image fit"><img src="images/otros/programa_congreso.png" alt="" /></a>
-										<header>
-											<h3>Programa Congreso CTyG</h3>
-										</header>
-									</article>
-								</div>
-								<div class="4u$ 12u$(mobile)">
-									<article class="item">
-										<a href="http://protea.ucr.ac.cr/src/protea_reservations/" class="image fit"><img src="images/otros/protea_reservaciones.png" alt="" /></a>
-										<header>
-											<h3>Reservaciones - Facedu</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="http://comunidad.inie.ucr.ac.cr/" class="image fit"><img src="images/otros/cvaa_inie.png" alt="" /></a>
-										<header>
-											<h3>Comunidad Ambiental de Aprendizaje</h3>
-										</header>
-									</article>
-								</div>
-							</div>
-
-						</div>
-					</section>
-
-				<!-- Contact -->
-					<section id="detalle" class="four">
-						<div class="container">
-
-							<header>
-								<h2>Detalle de los proyectos realizados</h2>
-							</header>
-
-							<p>En esta sección se hace un recorrido por los proyectos realizados.</p>
-
-
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Adrián Alvarado Ramírez. Derechos reservados.</li><li>Diseño original: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Sitio web del Ing. Adrián Alvarado Ramírez</title>
+</head>
+<body>
+	<h1>Ing. Adrián Alvarado Ramírez</h1>
+	<p>Para acceder artículos y otro material, puede visitar el sitio 
+		<a href="https://adrian-ar.in/">https://adrian-ar.in/</a></p>
+</body>
 </html>
