--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
 	<meta charset="UTF-8">	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Sitio web del Ing. Adrián Alvarado Ramírez</title>
+	<title>Sitio web del Ing. Adrián A. R.</title>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
-	<h1>Ing. Adrián Alvarado Ramírez</h1>
-	<p>Para acceder artículos y otro material, puede visitar el sitio 
-		<a href="https://adrian-ar.in/">https://adrian-ar.in/</a></p>
+<body class="bg-body-secondary">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col text-center bg-info-subtle pb-3 pt-3">
+				<h1>Ing. Adrián A. R.</h1>
+			</div>
+		</div>
+	</div>
+	<div class="container pt-3">		
+		<div class="row">
+			<div class="col">				
+				<p>Para acceder artículos y otro material, puede visitar el sitio 
+				<a href="https://adrian-ar.in/">https://adrian-ar.in/</a></p>
+			</div>
+		</div>		
+	</div>	
 </body>
 </html>
