--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 	<div class="container pt-3">		
 		<div class="row">
 			<div class="col">				
-				<p>Para acceder artículos y otro material, puede visitar el sitio 
-				<a href="https://adrian-ar.in/">https://adrian-ar.in/</a></p>
+				<p>En construcción :)</p>
 			</div>
 		</div>		
 	</div>	
